--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta name="viewport"
+        content="width=device-width, height=device-height, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
     <link href='https://fonts.googleapis.com/css?family=Pacifico' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./style.css">
 
@@ -13,9 +14,21 @@
 </head>
 
 <body>
-    <div class="container-fluid">
-        <h1 class="red-text text-center">Happy Diwali</h1>
+    <div class="container1 container-fluid">
+        <div class="flame red-text" style="display: flex; align-items: center; justify-content: center;">
+            <ul class="fireworks">
+                <li><span></span></li>
+            </ul>
+            <h1><span class="span">Happy Diwali</span></h1>
+            <ul class="fireworks">
+                <li><span></span></li>
+            </ul>
+        </div>
     </div>
+    <br><br>
+    <h3 class="text">Wishing you a festival of lights that brings joy, prosperity, and success. <br> May the glow of diyas illuminate your path and fill your life with happiness.</h3>
+
+    <center><span>Click on the screen to celebrate Diwali</span> </center>
 
     <footer class="footer footer-inverse" style="margin-bottom: 0;">
         <div class="container">
