--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
 <body>
     <div class="container1 container-fluid">
-        <div class="flame red-text" style="display: flex; align-items: center; justify-content: center;">
-            <ul class="fireworks">
+        <div class="flame red-text" style="display: flex; justify-content: center;">
+            <ul class="fireworks" style="align-items: center;">
                 <li><span></span></li>
             </ul>
             <h1><span class="span">Happy Diwali</span></h1>
@@ -25,7 +25,7 @@
             </ul>
         </div>
     </div>
-    <br><br>
+    <br><br><br><br>
     <h3 class="text">Wishing you a festival of lights that brings joy, prosperity, and success. <br> May the glow of diyas illuminate your path and fill your life with happiness.</h3>
 
     <center><span>Click on the screen to celebrate Diwali</span> </center>
